--- a/src/DIPS.Xamarin.UI/DIPS.Xamarin.UI.csproj
+++ b/src/DIPS.Xamarin.UI/DIPS.Xamarin.UI.csproj
@@ -27,6 +27,9 @@
     <Compile Update="Controls\Modality\ModalityLayout.xaml.cs">
       <DependentUpon>ModalityLayout.xaml</DependentUpon>
     </Compile>
+    <Compile Update="Controls\Pdf\PdfViewer.xaml.cs">
+      <DependentUpon>%(Filename)</DependentUpon>
+    </Compile>
     <Compile Update="Controls\Popup\PopupLayout.xaml.cs">
       <DependentUpon>PopupLayout.xaml</DependentUpon>
     </Compile>
