--- a/src/Samples/DIPS.Xamarin.UI.Samples/DIPS.Xamarin.UI.Samples.csproj
+++ b/src/Samples/DIPS.Xamarin.UI.Samples/DIPS.Xamarin.UI.Samples.csproj
@@ -34,6 +34,9 @@
     <EmbeddedResource Update="Controls\DatePicker\DatePickerPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Controls\Pdf\PdfViewerPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Controls\RadioButtonGroup\RadioButtonGroupPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
