Cleaned up and improved android, started on ios

--- a/src/DIPS.Xamarin.UI.iOS/DIPS.Xamarin.UI.iOS.csproj
+++ b/src/DIPS.Xamarin.UI.iOS/DIPS.Xamarin.UI.iOS.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Library.cs" />
+    <Compile Include="Pdf\PdfWebViewRenderer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
