--- a/src/DIPS.Xamarin.UI.Android/DIPS.Xamarin.UI.Android.csproj
+++ b/src/DIPS.Xamarin.UI.Android/DIPS.Xamarin.UI.Android.csproj
@@ -48,15 +48,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Library.cs" />
-    <Compile Include="Pdf\PdfViewerRenderer.cs" />
+    <Compile Include="Pdf\PdfRendererImplementation.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
-    <AndroidResource Include="Resources\raw\sample.pdf">
-      <Generator>MSBuild:UpdateGeneratedFiles</Generator>
-    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="28.0.0.3" />
@@ -78,12 +75,6 @@
       <Project>{22985E47-8C01-4951-A641-315B0D59B107}</Project>
       <Name>DIPS.Xamarin.UI</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\layout\PdfViewerLayout.xml">
-      <Generator>MSBuild:UpdateGeneratedFiles</Generator>
-      <SubType>Designer</SubType>
-    </AndroidResource>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
